Update copyright header. Specify charset